Process Hacker

2.30
 * NEW/IMPROVED:
   * Re-enabled powerful process termination on 32-bit Windows 8
   * Updated UserNotes plugin:
     * Added ability to save process priority
     * Added "Only for processes with the same command line" option for process comments

2.29
 * NEW/IMPROVED:
   * Added App ID column for processes
   * Added new ASLR information for Windows 8
   * Added Restart to Boot Options and Hybrid Shutdown menu items for
     Windows 8
   * Added ability to specify processes by their names and inject and
     unload DLLs in command line
   * Removed 512 character limit when copying text
   * Moved Terminator to Miscellaneous menu
   * Updated default dbghelp.dll path for Windows SDK v8
   * Updated ExtendedServices plugin:
     * Added new triggers for Windows 8
     * Fixed bug when restarting services
   * Updated ExtendedTools plugin:
     * Improved support for multiple GPUs (again)
     * GPU column now respects "Include CPU usage of children" option
   * Updated ToolStatus plugin:
     * Fixed search box fonts
     * Fixed controls not being properly hidden/removed from the window when disabled
   * Updated WindowExplorer plugin:
     * Fixed window list not displaying Modern UI windows
 * FIXED:
   * Fixed Load Count column sorting bug
   * Fixed signature verification on Windows 8
   * Fixed task scheduler information on Windows 8
   * Fixed drag bug in tree list
   * Fixed KProcessHacker bug affecting TmTx objects
   * Fixed Run As feature on Windows 8
   * Fixed bug where -settings parameter is not propagated
   * Fixed tab key behavior on main window
   * Fixed recognition of Modern UI windows

2.28
 * NEW/IMPROVED:
   * peview now resolves .lnk targets
   * Fixed Ctrl+A for processes, services and network connections and
     added Ctrl+A for other windows
   * Changed confirmation prompts to select the destructive action by
     default
   * Updated DotNetTools plugin:
     * Fixed inaccurate stack traces for certain .NET programs