@@ -1093,12 +1093,14 @@ BEGIN
     CONTROL         "Hide when closed",IDC_HIDEONCLOSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,83,71,10
     CONTROL         "Hide when minimized",IDC_HIDEONMINIMIZE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,95,81,10
     CONTROL         "Start hidden",IDC_STARTHIDDEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,107,55,10
-    CONTROL         "Collapse services on start",IDC_COLLAPSESERVICES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,141,71,98,10
-    CONTROL         "Single-click tray icons",IDC_ICONSINGLECLICK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,141,83,83,10
+    CONTROL         "Collapse services on start",IDC_COLLAPSESERVICES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,71,98,10
+    CONTROL         "Single-click tray icons",IDC_ICONSINGLECLICK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,83,83,10
     EDITTEXT        IDC_ICONPROCESSES,61,53,40,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Icon Processes:",IDC_STATIC,7,55,52,8
-    CONTROL         "Enable plugins",IDC_ENABLEPLUGINS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,141,95,61,10
+    CONTROL         "Enable plugins",IDC_ENABLEPLUGINS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,107,61,10
     PUSHBUTTON      "Font...",IDC_FONT,7,121,50,14
+    CONTROL         "Icon click toggles visibility",IDC_ICONTOGGLESVISIBILITY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,122,95,97,10
 END
 
 IDD_OPTHIGHLIGHTING DIALOGEX 0, 0, 250, 174
